fixed alignment

--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ a {
 
 .output {
     width: 900px;
-    padding:20px 30px 0px 30px;
+    padding:200px 30px 0px 30px;
     margin:0 auto;
     text-align: left;
 }
